--- a/index.html
+++ b/index.html
@@ -4,8 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <div class="ram">
+        <div class="logo">
+            <img src="./imgs/logo.png" alt="Logo">
+        </div>
+        <div class="search">
+            <label>
+                <input type="text" id="searchInput" placeholder="Search for names...">
+            </label>
+        </div>
+        <div class="items">
+            <div class="item">
+                <img src="123" alt="">
+                <div class="text">
+                    <h2>Rick Chivoo</h2>
+                    <h3>Human</h3>
+                </div>
+            </div>
+            <div class="item">
+                <img src="123" alt="">
+                <div class="text">
+                    <h2>Rick Chivoo</h2>
+                    <h3>Human</h3>
+                </div>
+            </div>
+            <div class="item">
+                <img src="123" alt="">
+                <div class="text">
+                    <h2>Rick Chivoo</h2>
+                    <h3>Human</h3>
+                </div>
+            </div>
+            <div class="item">
+                <img src="123" alt="">
+                <div class="text">
+                    <h2>Rick Chivoo</h2>
+                    <h3>Human</h3>
+                </div>
+            </div>
+            <div class="item">
+                <img src="123" alt="">
+                <div class="text">
+                    <h2>Rick Chivoo</h2>
+                    <h3>Human</h3>
+                </div>
+            </div>
+            <div class="item">
+                <img src="123" alt="">
+                <div class="text">
+                    <h2>Rick Chivoo</h2>
+                    <h3>Human</h3>
+                </div>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
