--- a/index.html
+++ b/index.html
@@ -17,45 +17,53 @@
             </label>
         </div>
         <div class="items">
+
             <div class="item">
-                <img src="123" alt="">
+                <img src="" alt="">
                 <div class="text">
-                    <h2>Rick Chivoo</h2>
+                    <h2>Rick Chivo</h2>
                     <h3>Human</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="123" alt="">
+                <img src="" alt="">
                 <div class="text">
-                    <h2>Rick Chivoo</h2>
+                    <h2>Rick Chivo</h2>
                     <h3>Human</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="123" alt="">
+                <img src="" alt="">
                 <div class="text">
-                    <h2>Rick Chivoo</h2>
+                    <h2>Rick Chivo</h2>
                     <h3>Human</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="123" alt="">
+                <img src="" alt="">
                 <div class="text">
-                    <h2>Rick Chivoo</h2>
+                    <h2>Rick Chivo</h2>
                     <h3>Human</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="123" alt="">
+                <img src="" alt="">
                 <div class="text">
-                    <h2>Rick Chivoo</h2>
+                    <h2>Rick Chivo</h2>
                     <h3>Human</h3>
                 </div>
             </div>
             <div class="item">
-                <img src="123" alt="">
+                <img src="" alt="">
                 <div class="text">
-                    <h2>Rick Chivoo</h2>
+                    <h2>Rick Chivo</h2>
+                    <h3>Human</h3>
+                </div>
+            </div>
+            <div class="item">
+                <img src="" alt="">
+                <div class="text">
+                    <h2>Rick Chivo</h2>
                     <h3>Human</h3>
                 </div>
             </div>
