--- a/index.html
+++ b/index.html
@@ -1,74 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="ram">
-        <div class="logo">
-            <img src="./imgs/logo.png" alt="Logo">
-        </div>
-        <div class="search">
-            <label>
-                <input type="text" id="searchInput" placeholder="Search for names...">
-            </label>
-        </div>
-        <div class="items">
-
-            <div class="item">
-                <img src="" alt="">
-                <div class="text">
-                    <h2>Rick Chivo</h2>
-                    <h3>Human</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="" alt="">
-                <div class="text">
-                    <h2>Rick Chivo</h2>
-                    <h3>Human</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="" alt="">
-                <div class="text">
-                    <h2>Rick Chivo</h2>
-                    <h3>Human</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="" alt="">
-                <div class="text">
-                    <h2>Rick Chivo</h2>
-                    <h3>Human</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="" alt="">
-                <div class="text">
-                    <h2>Rick Chivo</h2>
-                    <h3>Human</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="" alt="">
-                <div class="text">
-                    <h2>Rick Chivo</h2>
-                    <h3>Human</h3>
-                </div>
-            </div>
-            <div class="item">
-                <img src="" alt="">
-                <div class="text">
-                    <h2>Rick Chivo</h2>
-                    <h3>Human</h3>
-                </div>
-            </div>
-            
-        </div>
+    <div class="menu hidden">
+         <div class="item">
+             test
+         </div>
     </div>
+    <button class="menuToggle">MENU</button>
+    <div class="rickandmortyContainer">
+
+
+            <div class="logo">
+                <img src="./imgs/logo.png" alt="">
+            </div>
+
+            <div class="search">
+                <input type="text" placeholder="Enter character name" class="input-search"/>
+            </div>
+
+            <div class="chars">
+
+            </div>
+
+    </div>
+
+<script src="./js/script.js" type="module"></script>
 </body>
 </html>
