--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="menu hidden">
-         <div class="item">
-             test
-         </div>
-    </div>
-    <button class="menuToggle">MENU</button>
     <div class="rickandmortyContainer">
 
 
@@ -25,7 +19,13 @@
             </div>
 
             <div class="chars">
-
+                <div class="item">
+                        <img id="avatar" src="" alt="">
+                    <div class="info">
+                        <h3>Name</h3>
+                        <h4>Race</h4>
+                    </div>
+                </div>
             </div>
 
     </div>
